<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.toulon.seatech.easycovoit.PropositionTrajetActivity">

    <TextView
        android:id="@+id/titrePropositionTrajet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/titrePropositionTrajet1" />

    <TextView
        android:id="@+id/titrePropositionTrajet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/titrePropositionTrajet2" />

    <TextView
        android:id="@+id/titrePropositionTrajet3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/titrePropositionTrajet3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="120dp"
        android:text="@string/depart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/editLieuDepart"
        android:layout_marginTop="13dp"
        android:text="@string/arrivee"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editLieuDepart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editLieuArrivee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLieuDepart"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/editLieuDepart"
        android:layout_below="@+id/editLieuDepart"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editDate"
        android:layout_alignBottom="@+id/editDate"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:text="@string/dateHeure_propose"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLieuArrivee"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/editLieuArrivee"
        android:layout_below="@+id/editLieuArrivee"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false" />

    <Button
        android:id="@+id/btnProposer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/btn_proposer" />

    <TextView
        android:id="@+id/tvNbPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_alignBaseline="@+id/editNbPlacePropose"
        android:layout_alignBottom="@+id/editNbPlacePropose"
        android:layout_below="@+id/editDate"
        android:text="@string/nbPlaceDispo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editNbPlacePropose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDate"
        android:layout_toEndOf="@+id/tvNbPlaces"
        android:layout_toRightOf="@+id/tvNbPlaces"
        android:ems="10"
        android:inputType="number" />




</RelativeLayout>
