<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="fr.toulon.seatech.easycovoit.LoginActivity">

<TextView
    android:id="@+id/viewEmail"
    android:layout_width="wrap_content"
    android:layout_height="25dp"
    android:layout_alignBaseline="@+id/emailLog"
    android:layout_alignBottom="@+id/emailLog"
    android:layout_toEndOf="@+id/progressBar"
    android:layout_toRightOf="@+id/progressBar"
    android:text="@string/view_email" />

<TextView
    android:id="@+id/viewPwd"
    android:layout_width="wrap_content"
    android:layout_height="26dp"
    android:layout_alignBaseline="@+id/pwdLog"
    android:layout_alignBottom="@+id/pwdLog"
    android:layout_toEndOf="@+id/progressBar"
    android:layout_toRightOf="@+id/progressBar"
    android:text="@string/view_pwd"
    />

<EditText
    android:id="@+id/emailLog"
    android:layout_width="281dp"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/progressBar"
    android:layout_toEndOf="@+id/viewEmail"
    android:layout_toRightOf="@+id/viewEmail"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:textSize="12sp"
    android:visibility="visible" />

<EditText
    android:id="@+id/pwdLog"
    android:layout_width="281dp"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/emailLog"
    android:layout_toEndOf="@+id/viewPwd"
    android:layout_toRightOf="@+id/viewPwd"
    android:ems="10"
    android:inputType="textPassword"
    android:textSize="12sp"
    android:visibility="visible" />

<Button
    android:id="@+id/btn_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/pwdLog"
    android:layout_marginTop="31dp"
    android:layout_toLeftOf="@+id/btn_newUser"
    android:layout_toStartOf="@+id/btn_newUser"
    android:text="@string/btn_login"
    android:visibility="visible" />

<Button
    android:id="@+id/btn_newUser"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/btn_reset"
    android:layout_alignEnd="@+id/pwdLog"
    android:layout_alignRight="@+id/pwdLog"
    android:text="@string/btn_signup"
    android:visibility="visible"
    />

<Button
    android:id="@+id/btn_reset"
    style="@style/Widget.AppCompat.Button.Borderless.Colored"
    android:layout_width="wrap_content"
    android:layout_height="28dp"
    android:layout_alignLeft="@+id/btn_login"
    android:layout_alignStart="@+id/btn_login"
    android:layout_below="@+id/btn_login"
    android:text="@string/btn_reset"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
    android:textColor="@android:color/black"
    android:textSize="8sp"
    android:visibility="visible" />

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:visibility="gone"
    tools:visibility="gone" />

</RelativeLayout>
