<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.toulon.seatech.easycovoit.SignupActivity">

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignBaseline="@+id/emailSU"
        android:layout_alignBottom="@+id/emailSU"
        android:layout_toEndOf="@+id/progressBar"
        android:layout_toRightOf="@+id/progressBar"
        android:text="@string/view_email" />

    <TextView
        android:id="@+id/viewPwd"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_alignBottom="@+id/pwdSU"
        android:layout_toEndOf="@+id/progressBar"
        android:layout_toRightOf="@+id/progressBar"
        android:text="@string/view_pwd" />

    <EditText
        android:id="@+id/emailSU"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/progressBar"
        android:layout_toEndOf="@+id/viewEmail"
        android:layout_toRightOf="@+id/viewEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/pwdSU"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/emailSU"
        android:layout_toEndOf="@+id/viewPwd"
        android:layout_toRightOf="@+id/viewPwd"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_loginSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwdSU"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/btn_newUserSU"
        android:layout_toStartOf="@+id/btn_newUserSU"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/btn_newUserSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_loginSU"
        android:layout_alignBottom="@+id/btn_loginSU"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_signup" />

    <Button
        android:id="@+id/btn_resetSU"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_loginSU"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/btn_reset"
        android:textSize="8sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        tools:visibility="gone" />
</RelativeLayout>
