<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.toulon.seatech.easycovoit.TrajetActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:layout_marginStart="11dp"
        android:layout_weight="1"
        android:text="@string/strIdentite"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvIdentiteChauffeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginStart="11dp"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDepart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvIdentiteChauffeur"
        android:layout_marginStart="11dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvDepart"
        android:layout_toEndOf="@+id/tvDepart"
        android:layout_marginStart="11dp"
        android:layout_weight="1"
        android:text="à"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvArrivee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView11"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/textView11"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvDepart"
        android:layout_below="@+id/tvDepart"
        android:layout_marginTop="31dp"
        android:layout_toEndOf="@+id/tvDepart"
        android:layout_weight="1"
        android:text="@string/strHeureDepart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView18"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/textView18"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView18"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="29dp"
        android:layout_toEndOf="@+id/tvDepart"
        android:layout_weight="1"
        android:text="@string/strNbPlace"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvNbPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView21"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/textView21"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReserver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="129dp"
        android:layout_weight="1"
        android:text="@string/btnReserver" />

</RelativeLayout>
